fixed blog spacing

--- a/assets/style.css
+++ b/assets/style.css
@@ -112,7 +112,7 @@ p{
 }
 .about-me{
     width: 100%;
-    padding: 5rem 9rem;
+    padding: 4rem 4rem;
 }
 .w-i-d {
     text-align: center;
